# youtube-whisper-stt

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.base.json  tsconfig.json  turbo.json  vite.config.ts
apps/hushline/: package.json  tsconfig.json
apps/hushline/.storybook/: main.ts  preview.ts
apps/hushline/.storybook/mocks/: tauri-core.ts  tauri-dialog.ts  tauri-event.ts  tauri-opener.ts
apps/hushline/src-tauri/: Cargo.toml  tauri.conf.json
apps/hushline/src-tauri/capabilities/: default.json
apps/hushline/src-tauri/src/: application.rs  domain.rs  main.rs  ports.rs
apps/hushline/src-tauri/src/adapters/: mod.rs  system.rs  tauri.rs
apps/hushline/src/app/: styles.css
apps/hushline/src/entities/transcription/: index.ts
apps/hushline/src/features/transcribe-video/: index.ts
apps/hushline/src/shared/api/: tauri.ts
docs/: reuse-a2-dependencies-in-a1.md
src/: main.tsx
src-tauri/: tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: application.rs  domain.rs  lib.rs
src-tauri/src/adapters/: tauri.rs
src/app/: App.tsx
src/entities/transcription/: index.ts
src/entities/transcription/model/: types.ts
src/features/manage-whisper-model/: index.ts
src/pages/transcription/: index.ts
src/pages/transcription/ui/: TranscriptionPage.tsx
src/shared/api/: index.ts
src/shared/ui/: index.ts  input.tsx
src/widgets/app-header/: index.ts
src/widgets/transcript-panel/: index.ts
src/widgets/transcript-panel/ui/: TranscriptPanel.tsx
(+18 files in other folders)
