[package]
name = "hushline"
version = "0.1.0"
description = "Local YouTube to Whisper transcription"
authors = ["you"]
edition = "2021"

[lib]
name = "hushline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
